syntax = "proto3";

option csharp_namespace = "RATSP.GrossService.Services";

service ExcelService {
  rpc CreateExcelDocuments (CreateExcelDocumentsRequest) returns (CreateExcelDocumentsReply);
}

service ExcelValuesService {
  rpc AddExcelValues (AddExcelValuesRequest) returns (AddExcelValuesReply);
}

message CreateExcelDocumentsRequest {
  repeated ExcelValue excel_values_list = 1;
  repeated string selected_companies = 2;
  string selected_date = 3;
  bool gross_in = 4;
  bool gross_out = 5;
  bool debit = 6;
  bool credit = 7;
}

message CreateExcelDocumentsReply {
  repeated bytes excel_files = 1;
}

message AddExcelValuesRequest {
  bytes workbook_bytes = 1;
}

message AddExcelValuesReply {
  repeated ExcelValue excel_values_list = 1;
}

message ExcelValue {
  string number = 1;
  string insurer = 2;
  string policyholder = 3;
  string contract_number = 4;
  string start_date = 5;
  string end_date = 6;
  string currency = 7;
  string insurance_amount_liability_limit = 8;
  string accrued_bonus100 = 9;
  string gross_premium = 10;
  string reinsurer_commission_percent = 11;
  string reinsurer_commission = 12;
  string administrator_commission_percent = 13;
  string administrator_commission = 14;
  string net_premium = 15;
  string premium_percent = 16;
  string payment_rate_return_rate = 17;
  string refund_premium = 18;
  string administrator_commission_rub = 19;
  string sanctions_risk = 20;
  string reinsurer_fraction = 21;
  string payment_date = 22;
  string payment_summ = 23;
  string payment_number = 24;
  string comment = 25;
  string insurance_type = 26;
  string payment_contract = 27;
}